Fix writing delete markers after writing unrelated entry

Before writing the config we reparse it to pick up entries
from disk. Then we build a map of things to write and write
that.

Since 7a34db5ab0666addabd038269366407645b04647 this would
skip deleted entries since they are not considered dirty.

However this causes lines that are explicitly marked as deleted
to disappear, which results in the system-wide default being applied.

Always force writing deleted values to fix that.

Co-authored-by: Nicolas Fella <nicolas.fella@gmx.de>

BUG: 519481